See RS-96698. - Add localization for JColorChooser and JFileChooser

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1540,6 +1540,71 @@ LobDataItemViewerPanel.OpenFile=Open file
 LobDataItemViewerPanel.Text=Text
 LobDataItemViewerPanel.TotalSize=Total Size:
 LobDataItemViewerPanel.UnsupportedFormat=Unsupported format
+LocaleManager.ColorChooser.title=Select Color
+LocaleManager.ColorChooser.okText=OK
+LocaleManager.ColorChooser.resetText=Reset
+LocaleManager.ColorChooser.cancelText=Cancel
+LocaleManager.ColorChooser.swatchesNameText=Swatches
+LocaleManager.ColorChooser.swatchesRecentText=Recent
+LocaleManager.ColorChooser.previewText=Preview
+LocaleManager.ColorChooser.sampleText=Sample Text
+LocaleManager.ColorChooser.hueText=Hue
+LocaleManager.ColorChooser.saturationText=Saturation
+LocaleManager.ColorChooser.valueText=Value
+LocaleManager.ColorChooser.transparencyText=Transparency
+LocaleManager.ColorChooser.lightnessText=Lightness
+LocaleManager.ColorChooser.alphaText=Alpha
+LocaleManager.ColorChooser.rgbRedText=Red
+LocaleManager.ColorChooser.rgbGreenText=Green
+LocaleManager.ColorChooser.rgbBlueText=Blue
+LocaleManager.ColorChooser.rgbHexCodeText=Color Code
+LocaleManager.ColorChooser.cmykCyanText=Cyan
+LocaleManager.ColorChooser.cmykMagentaText=Magenta
+LocaleManager.ColorChooser.cmykYellowText=Yellow
+LocaleManager.ColorChooser.cmykBlackText=Black
+LocaleManager.FileChooser.title=Open File
+LocaleManager.FileChooser.acceptAllFileFilterText=All Files
+LocaleManager.FileChooser.cancelButtonText=Cancel
+LocaleManager.FileChooser.cancelButtonToolTipText=Close dialog
+LocaleManager.FileChooser.directoryDescriptionText=Folder
+LocaleManager.FileChooser.directoryOpenButtonText=Open
+LocaleManager.FileChooser.directoryOpenButtonToolTipText=Open selected directory
+LocaleManager.FileChooser.fileDescriptionText=All Files
+LocaleManager.FileChooser.helpButtonText=Help
+LocaleManager.FileChooser.helpButtonToolTipText=Show help
+LocaleManager.FileChooser.newFolderErrorText=Error creating directory
+LocaleManager.FileChooser.openButtonText=Open
+LocaleManager.FileChooser.openButtonToolTipText=Open selected file
+LocaleManager.FileChooser.openDialogTitleText=Open
+LocaleManager.FileChooser.saveButtonText=Save
+LocaleManager.FileChooser.saveButtonToolTipText=Save selected file
+LocaleManager.FileChooser.saveDialogTitleText=Save
+LocaleManager.FileChooser.updateButtonText=Refresh
+LocaleManager.FileChooser.updateButtonToolTipText=Refresh list of directories
+LocaleManager.FileChooser.detailsViewActionLabelText=Table
+LocaleManager.FileChooser.detailsViewButtonAccessibleName=Table
+LocaleManager.FileChooser.detailsViewButtonToolTipText=Table
+LocaleManager.FileChooser.fileAttrHeaderText=Attributes
+LocaleManager.FileChooser.fileDateHeaderText=Modified
+LocaleManager.FileChooser.fileNameHeaderText=Name
+LocaleManager.FileChooser.fileNameLabelText=File Name:
+LocaleManager.FileChooser.fileSizeHeaderText=Size
+LocaleManager.FileChooser.fileTypeHeaderText=Type
+LocaleManager.FileChooser.filesOfTypeLabelText=Files of Type:
+LocaleManager.FileChooser.homeFolderAccessibleName=Home
+LocaleManager.FileChooser.homeFolderToolTipText=Home
+LocaleManager.FileChooser.listViewActionLabelText=List
+LocaleManager.FileChooser.listViewButtonAccessibleName=List
+LocaleManager.FileChooser.listViewButtonToolTipText=List
+LocaleManager.FileChooser.lookInLabelText=Look in:
+LocaleManager.FileChooser.newFolderAccessibleName=New folder
+LocaleManager.FileChooser.newFolderActionLabelText=New folder
+LocaleManager.FileChooser.newFolderToolTipText=Create new folder
+LocaleManager.FileChooser.refreshActionLabelText=Refresh
+LocaleManager.FileChooser.saveInLabelText=Save to:
+LocaleManager.FileChooser.upFolderAccessibleName=Up
+LocaleManager.FileChooser.upFolderToolTipText=One level up
+LocaleManager.FileChooser.viewMenuLabelText=View
 LoginPasswordDialog.login=Login
 LoginPasswordDialog.password=Password
 LoginPasswordDialog.register=Register
