--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1540,6 +1540,71 @@ LobDataItemViewerPanel.OpenFile=Открыть файл
 LobDataItemViewerPanel.Text=Текст
 LobDataItemViewerPanel.TotalSize=Общий размер:
 LobDataItemViewerPanel.UnsupportedFormat=Неподдерживаемый формат
+LocaleManager.okButtonText=OK
+LocaleManager.resetButtonText=Сбросить
+LocaleManager.cancelButtonText=Отмена
+LocaleManager.ColorChooser.title=Выбор Цвета
+LocaleManager.ColorChooser.swatchesNameText=Образцы
+LocaleManager.ColorChooser.swatchesRecentText=Недавние
+LocaleManager.ColorChooser.previewText=Предпросмотр
+LocaleManager.ColorChooser.sampleText=Пример Текста
+LocaleManager.ColorChooser.hueText=Оттенок
+LocaleManager.ColorChooser.saturationText=Насыщенность
+LocaleManager.ColorChooser.valueText=Значение
+LocaleManager.ColorChooser.transparencyText=Прозрачность
+LocaleManager.ColorChooser.lightnessText=Яркость
+LocaleManager.ColorChooser.alphaText=Альфа
+LocaleManager.ColorChooser.rgbRedText=Красный
+LocaleManager.ColorChooser.rgbGreenText=Зеленый
+LocaleManager.ColorChooser.rgbBlueText=Синий
+LocaleManager.ColorChooser.rgbHexCodeText=Код Цвета
+LocaleManager.ColorChooser.cmykCyanText=Голубой
+LocaleManager.ColorChooser.cmykMagentaText=Пурпурный
+LocaleManager.ColorChooser.cmykYellowText=Желтый
+LocaleManager.ColorChooser.cmykBlackText=Черный
+LocaleManager.FileChooser.title=Открыть Файл
+LocaleManager.FileChooser.acceptAllFileFilterText=Все файлы
+LocaleManager.FileChooser.cancelButtonText=Отмена
+LocaleManager.FileChooser.cancelButtonToolTipText=Закрыть диалог
+LocaleManager.FileChooser.directoryDescriptionText=Папка
+LocaleManager.FileChooser.directoryOpenButtonText=Открыть
+LocaleManager.FileChooser.directoryOpenButtonToolTipText=Открыть выбранную директорию
+LocaleManager.FileChooser.fileDescriptionText=Все файлы
+LocaleManager.FileChooser.helpButtonText=Помощь
+LocaleManager.FileChooser.helpButtonToolTipText=Показать справку
+LocaleManager.FileChooser.newFolderErrorText=Ошибка при создании каталога
+LocaleManager.FileChooser.openButtonText=Открыть
+LocaleManager.FileChooser.openButtonToolTipText=Открыть выбранный файл
+LocaleManager.FileChooser.openDialogTitleText=Открыть
+LocaleManager.FileChooser.saveButtonText=Сохранить
+LocaleManager.FileChooser.saveButtonToolTipText=Сохранить выбранный файл
+LocaleManager.FileChooser.saveDialogTitleText=Сохранить
+LocaleManager.FileChooser.updateButtonText=Обновить
+LocaleManager.FileChooser.updateButtonToolTipText=Обновить список директорий
+LocaleManager.FileChooser.detailsViewActionLabelText=Таблица
+LocaleManager.FileChooser.detailsViewButtonAccessibleName=Таблица
+LocaleManager.FileChooser.detailsViewButtonToolTipText=Таблица
+LocaleManager.FileChooser.fileAttrHeaderText=Атрибуты
+LocaleManager.FileChooser.fileDateHeaderText=Изменен
+LocaleManager.FileChooser.fileNameHeaderText=Имя
+LocaleManager.FileChooser.fileNameLabelText=Имя файла:
+LocaleManager.FileChooser.fileSizeHeaderText=Размер
+LocaleManager.FileChooser.fileTypeHeaderText=Тип
+LocaleManager.FileChooser.filesOfTypeLabelText=Тип файлов:
+LocaleManager.FileChooser.homeFolderAccessibleName=Домой
+LocaleManager.FileChooser.homeFolderToolTipText=Домой
+LocaleManager.FileChooser.listViewActionLabelText=Список
+LocaleManager.FileChooser.listViewButtonAccessibleName=Список
+LocaleManager.FileChooser.listViewButtonToolTipText=Список
+LocaleManager.FileChooser.lookInLabelText=Просмотр:
+LocaleManager.FileChooser.newFolderAccessibleName=Новая папка
+LocaleManager.FileChooser.newFolderActionLabelText=Новая папка
+LocaleManager.FileChooser.newFolderToolTipText=Создать новую папку
+LocaleManager.FileChooser.refreshActionLabelText=Обновить
+LocaleManager.FileChooser.saveInLabelText=Сохранить в:
+LocaleManager.FileChooser.upFolderAccessibleName=Вверх
+LocaleManager.FileChooser.upFolderToolTipText=На один уровень вверх
+LocaleManager.FileChooser.viewMenuLabelText=Просмотр
 LoginPasswordDialog.login=Войти
 LoginPasswordDialog.password=Пароль
 LoginPasswordDialog.register=Зарегистрироваться
