--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1965,6 +1965,8 @@ UserManagerPanel.message.confirm-delete-role=Are you sure that you want to delet
 UserManagerPanel.message.confirm-delete-user=Are you sure that you want to delete user?
 UserManagerPanel.message.create-role=Success
 UserManagerPanel.server=Server
+VisibleResultSetColumnsDialog.title=Visible Result Set Columns
+VisibleResultSetColumnsDialog.selectAll=Select All
 WindowAddRole.CreateRole=Create role
 WindowAddUser.Administrator=Administrator
 WindowAddUser.Cancel=Cancel
