Add ability to search columns by their names (See RS-92834)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1967,6 +1967,7 @@ UserManagerPanel.message.create-role=Success
 UserManagerPanel.server=Server
 VisibleResultSetColumnsDialog.title=Visible Result Set Columns
 VisibleResultSetColumnsDialog.selectAll=Select All
+VisibleResultSetColumnsDialog.searchLabel=Search:
 WindowAddRole.CreateRole=Create role
 WindowAddUser.Administrator=Administrator
 WindowAddUser.Cancel=Cancel
