--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1967,6 +1967,7 @@ UserManagerPanel.message.create-role=Роль создана
 UserManagerPanel.server=Сервер
 VisibleResultSetColumnsDialog.title=Видимые столбцы набора результатов
 VisibleResultSetColumnsDialog.selectAll=Выбрать Все
+VisibleResultSetColumnsDialog.searchLabel=Поиск:
 WindowAddRole.CreateRole=Создание роли
 WindowAddUser.Administrator=Администратор
 WindowAddUser.Cancel=Отмена
