Add localization for QueryEditorResultsPanel labels (See RS-96698)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1742,6 +1742,14 @@ QueryEditorResultsExporter.YouMustEnterACustomDelimiter=You must enter a custom 
 QueryEditorResultsExporter.YouMustSpecifyAFileToExportTo=You must specify a file to export to.
 QueryEditorResultsExporter.maxRowMessage=The maximum number of rows that can be exported is {0}
 QueryEditorResultsPanel.title=Output
+QueryEditorResultsPanel.SUCCESS=Statement executed successfully
+QueryEditorResultsPanel.NO_ROWS=No rows selected
+QueryEditorResultsPanel.ZERO_ROWS= 0 rows returned
+QueryEditorResultsPanel.ROW_RETURNED=row returned
+QueryEditorResultsPanel.ROWS_RETURNED=rows returned
+QueryEditorResultsPanel.DatabaseOutput=Database output
+QueryEditorResultsPanel.ResultSetTitle=Result Set 
+QueryEditorResultsPanel.ResultSetTitleFiltered=- Filtered
 QueryEditorToolBar.change-split-orientation-command=Change Split Orientation
 QueryEditorToolBar.clear-editor-output-command=Clear the editor's output log panel
 QueryEditorToolBar.comment-lines-command=Comment/Uncomment
