--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1742,6 +1742,14 @@ QueryEditorResultsExporter.YouMustEnterACustomDelimiter=Вы должны вве
 QueryEditorResultsExporter.YouMustSpecifyAFileToExportTo=Вы должны указать файл для экспорта.
 QueryEditorResultsExporter.maxRowMessage=Превышено максимальное количество строк экспорта. Будет экспортировано {0} строк
 QueryEditorResultsPanel.title=Вывод
+QueryEditorResultsPanel.SUCCESS=Запрос выполнен успешно
+QueryEditorResultsPanel.NO_ROWS=Не выбрано ни одной строки
+QueryEditorResultsPanel.ZERO_ROWS= 0 строк возвращено
+QueryEditorResultsPanel.ROW_RETURNED=строка возвращена
+QueryEditorResultsPanel.ROWS_RETURNED=строк возвращено
+QueryEditorResultsPanel.DatabaseOutput=Вывод БД
+QueryEditorResultsPanel.ResultSetTitle=Набор Результатов 
+QueryEditorResultsPanel.ResultSetTitleFiltered=- Отфильтровано
 QueryEditorToolBar.change-split-orientation-command=Изменить ориентацию разделителя
 QueryEditorToolBar.clear-editor-output-command=Очистить панель вывода
 QueryEditorToolBar.comment-lines-command=Закомментировать/Раскомментировать
