Add localization for difference panel for ComparerDB tree-view (See RS-141984)

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -935,6 +935,8 @@ ComparerDBPanel.LoadColumnsForAllTables=Загрузка столбцов для
 ConnectionImporter.ImportingConnection=Импортирование соединения [ {0} ]
 ComparerDBPanel.TreeView=Обзор
 ComparerDBPanel.DatabaseChanges=Изменения БД
+ComparerDBPanel.SourceLabel=Скрипт базы-образца (новый)
+ComparerDBPanel.TargetLabel=Скрипт целевой базы (старый)
 ComparerDBPanel.CreateObjects=Элементы для создания
 ComparerDBPanel.AlterObjects=Элементы для изменения
 ComparerDBPanel.DropObjects=Элементы для удаления
