--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -934,6 +934,8 @@ ComparerDBPanel.LoadFullInfoForObjects=Loading full info for %s
 ComparerDBPanel.LoadColumnsForAllTables=Loading columns for %s
 ComparerDBPanel.TreeView=View
 ComparerDBPanel.DatabaseChanges=Database Changes
+ComparerDBPanel.SourceLabel=Source DB Script (new)
+ComparerDBPanel.TargetLabel=Target DB Script (old)
 ComparerDBPanel.CreateObjects=Objects To Create
 ComparerDBPanel.AlterObjects=Objects To Alter
 ComparerDBPanel.DropObjects=Objects To Drop
