Add localization (See RS-96698)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -38,6 +38,7 @@ common.description=Description
 common.disconnect.button=Disconnect
 common.domain=DOMAIN
 common.driver=Driver editing
+common.done=Done
 common.drivers=Drivers
 common.edit=Edit
 common.encoding=Encoding
@@ -45,6 +46,7 @@ common.error-message=Error message
 common.error.apply-changes=An error occurred applying the specified changes.\n\nThe system returned:\n
 common.error.connection=The connection to the database could not be established. \nPlease ensure all required fields have been entered correctly and try again.\n\nThe system returned:\n
 common.execute=Execute
+common.executing=Executing...
 common.exit-confirmation=Сlose the application?
 common.fetched=Count fetched
 common.file=File
@@ -55,6 +57,7 @@ common.help.button=Help
 common.indexes=Indices
 common.input-parameters=Input parameters
 common.key=Key
+common.locale=en
 common.lost-connection=Lost connection to the server
 common.message-enter-password=Your user name and password are not defined.\nPlease enter your user name and password.
 common.message.apply-changes=Do you wish to apply your changes?
@@ -80,6 +83,8 @@ common.select.button=Select
 common.send.button=Send
 common.size=Size
 common.subtype=Subtype
+common.stop=Stop
+common.select=Select
 common.table=Table
 common.test.button=Test
 common.title-enter-password=Enter password
@@ -232,6 +237,7 @@ action.sql-history-command=SQL Command History
 action.to-camel-case-command=Camel Case
 action.to-lower-case-command=Lower Case
 action.to-underscore-command=Underscore
+action.execute-script-command=Execute SQL Script
 action.to-upper-case-command=Upper Case
 action.toggle-autocommit-command=Toggle Auto-Commit
 action.toggle-editor-output-command=Show/Hide Editor Output
@@ -720,6 +726,10 @@ BrowserTableEditingPanel.table-indexes=Table Indices
 BrowserTableEditingPanel.table-keys=Table Keys
 BrowserTableEditingPanel.table-name=Table Name:
 BrowserTableEditingPanel.table-triggers=Table Triggers
+BrowserTreeCellRenderer.Host=Host:
+BrowserTreeCellRenderer.DataSource=Data Source:
+BrowserTreeCellRenderer.User=User:
+BrowserTreeCellRenderer.Driver=Driver:
 BrowserTreeFolderPopupMenu.ConnectAll=Connect All
 BrowserTreeFolderPopupMenu.DeleteFolder=Delete Folder
 BrowserTreeFolderPopupMenu.DisconnectAll=Disconnect All
@@ -1164,6 +1174,9 @@ DefaultProgressDialog.CollapseButtonToolTipText=Collapse process to the backgrou
 DefaultStatementExecutor.table.invalid-name=Invalid table name
 DependenciesPanel.dependedOn=Objects, that {0} depends on
 DependenciesPanel.dependent=Objects,that depend on {0}
+DialogDriverPanel.title=Add New Driver
+DialogDriverPanel.newDriver=New Driver
+DialogDriverPanel.DriverExists=The driver name %s already exists
 DockedTabPane.menuItem.close=Close
 DockedTabPane.menuItem.minimize=Minimize
 DockedTabPane.menuItem.minimizeAll=Minimize All
@@ -1290,6 +1303,25 @@ ExportConnectionsPanelTwo.YouMustSelectAFilePathToExportTo=You must select a fil
 ExportDBUnitCommand.title=Export DBUnit Dataset
 ExportDelimitedCommand.title=Export Data
 ExportExcelCommand.title=Export Excel Spreadsheet
+ExportResultSetPanel.title=Export Result Set
+ExportResultSetPanel.IncludeColumnNames=Include column names as first row
+ExportResultSetPanel.UseDoubleQuotes=Use double quotes for char/varchar/longvarchar columns
+ExportResultSetPanel.Browse=Browse
+ExportResultSetPanel.Connection=Connection:
+ExportResultSetPanel.DataDelimiter=Data Delimiter:
+ExportResultSetPanel.OutputFile=Output File: 
+ExportResultSetPanel.FileChooserTitle=Select Export File Path
+ExportResultSetPanel.FileExists=The selected file exists.\nOverwrite existing file?
+ExportResultSetPanel.SelectDelimiter=Please select or enter an appropriate delimiter
+ExportResultSetPanel.SelectFile=Please select an output file
+ExportResultSetPanel.EnterQuery=Please enter a valid SQL query
+ExportResultSetPanel.RecordsTransferred=Records transferred: 
+ExportResultSetPanel.Executing=Executing:
+ExportResultSetPanel.NoValidResultSet=The executed query did not return a valid result set
+ExportResultSetPanel.ExecutionError=Execution error:\n
+ExportResultSetPanel.OperationCancelled=Operation cancelled by user action
+ExportResultSetPanel.Duration=Duration:
+ExportResultSetPanel.EnterSQL=Enter the SQL SELECT query below
 ExportResultsTableCommand.errorMessage=The required result set tab panel must be selected to proceed.
 ExportXMLCommand.title=Export XML
 FeedbackCommand.errorExecutingFeedbackCommand=Error executing feedback command:
@@ -1693,9 +1725,42 @@ PrintSelectDialog.SQL_Query_Text_Area=SQL Query Text Area
 PrintSelectDialog.SQL_Table_Results_Panel=SQL Table Results Panel
 PrintSelectDialog.Select_the_print_area=Select the print area
 PropertiesAppearance.ChangingTheme.Information=Changing the look and feel may also change the colours applied to syntax\nhighlighting and the results set table views to better suit the selected look
+PropertiesLookPlugins.Find=Find
+PropertiesLookPlugins.Browse=Browse
+PropertiesLookPlugins.SkinLookFeel=Skin Look and Feel
+PropertiesLookPlugins.Install=Install
+PropertiesLookPlugins.ThemePack=Theme Pack:
+PropertiesLookPlugins.Name=Name:
+PropertiesLookPlugins.ClassName=Class Name:
+PropertiesLookPlugins.LibraryPath=Library Path:
+PropertiesLookPlugins.LookFeelPlugins=Look and Feel Plugins
+PropertiesLookPlugins.Note=Note: Activate this feature from the 'Display' node.
+PropertiesLookPlugins.LookFeelLibraryIsRequired=A valid path to the look and feel library is required
+PropertiesLookPlugins.LibraryIsRequired=A valid path to the library is required
+PropertiesLookPlugins.AccessingFileOccurredError=An error occurred accessing the specified file.
+PropertiesLookPlugins.SystemReturned=\n\nThe system returned\n
+PropertiesLookPlugins.NoValidClasses=No valid classes of type javax.swing.LookAndFeel\nwere found in the specified resource
+PropertiesLookPlugins.SelectLookFeel=Select Look and Feel
+PropertiesLookPlugins.SelectLookFeelFromList=You must select a look and feel from the list
+PropertiesLookPlugins.NewLookFeelPlugin=New Look and Feel Plugin
+PropertiesLookPlugins.WannaDeleteLookFeel=Are you sure you want to delete the selected look and feel plugin?
+PropertiesLookPlugins.ZIPArchiveFiles=ZIP Archive Files
+PropertiesLookPlugins.JavaArchiveFiles=Java Archive Files
+PropertiesLookPlugins.SelectLookFeelPluginLibrary=Select Look & Feel Plugin Library...
+PropertiesToolBar.AddSeparatorToolTip=Adds a separator above the selection
+PropertiesToolBar.RemoveSeparatorToolTip=Removes the selected separator
+PropertiesToolBar.FileTools=File Tools - Buttons
+PropertiesToolBar.EditTools=Edit Tools - Buttons
+PropertiesToolBar.SearchTools=Search Tools - Buttons
+PropertiesToolBar.DatabaseTools=Database Tools - Buttons
+PropertiesToolBar.BrowserTools=Browser Tools - Buttons
+PropertiesToolBar.Import/ExportTools=Import/Export Tools - Buttons
+PropertiesToolBar.SystemTools=System Tools - Buttons
 PropertyWrapperModel.property=Property
 PropertyWrapperModel.value=Value
 QueryEditor.Filter=Filter:
+QueryEditor.FilterToolTip=Apply filter to current result set
+QueryEditor.MaxRowsToolTip=Set the maximum rows returned (-1 for all)
 QueryEditor.MaxRows.tool-tip=Enable/disable max records
 QueryEditor.MaxRows=Max Rows:
 QueryEditor.StopOnError.tool-tip=Enable/disable stopping when error in script
@@ -1779,6 +1844,11 @@ QueryEditorToolBar.shift-text-right-command=Shift line/selection right
 QueryEditorToolBar.sql-history-command=Show history of executed queries
 QueryEditorToolBar.toggle-autocommit-command=Toggle auto-commit on/off
 QueryEditorToolBar.toggle-editor-output-command=Show/hide the output pane
+QueryTextPopupToolbar.hidePopup=Hide
+QueryTextPopupToolbar.PreviousExecutedResultSet=Previous executed result set
+QueryTextPopupToolbar.NextExecutedResultSet=Next executed result set
+QueryTextPopupToolbar.Copy=Copy this query to the system clipboard
+QueryTextPopupToolbar.GoTo=Go to this query in the editor
 ReddatabaseAPI.Authorization=Authorization
 ReddatabaseAPI.message=To continue you need to enter\nyour login and password from the site reddatabase.ru\nAuthorization is required to send bug reports\nand automatically download updates from the site.
 ReddatabaseAPI.unknown-password=Unknown Login or Password. Try again?
@@ -1823,6 +1893,10 @@ SearchFilesDialog.message.EnterSearchText=You must enter search text
 SearchFilesDialog.message.NotSelectedPath=You must select a search path
 SearchFilesDialog.message.ThePathNotExist=The path or file entered does not exist
 SearchFilesDialog.message.searchSubdirsCheck=Search Subdirectories
+ShowPasswordDialog.Password=Password
+ShowPasswordDialog.Copy=Copy to Clipboard
+ShowPasswordDialog.CopyToolTip=Copies the selected query to the system clipboard
+ShowPasswordDialog.PasswordForConnection=Password for connection
 SimpleButtonsPanel.cancel=Cancel
 SimpleButtonsPanel.ok=OK
 SimpleDataItemViewerPanel.DataType=Data Type:
@@ -1904,6 +1978,9 @@ TableTriggersTableModel.Description=Comment
 TableTriggersTableModel.Position=Position
 TableTriggersTableModel.TriggerName=Trigger Name
 TableTriggersTableModel.TriggerType=Trigger Type
+TabPopupMenu.Close=Close
+TabPopupMenu.CloseAll=Close All
+TabPopupMenu.CloseOthers=Close Others
 TraceManagerPanel.Body=Body
 TraceManagerPanel.BuildConfigurationFile=BuildConfigurationFile
 TraceManagerPanel.Charset=Charset
@@ -1945,6 +2022,7 @@ TraceManagerPanel.Username=User name
 TraceManagerPanel.VisibleColumns=Visible Columns
 TraceManagerPanel.matchCase=Match case
 TraceManagerPanel.title=Trace Manager
+ToolBarButton.separator=- Separator -
 UserManagerPanel.Add=Add
 UserManagerPanel.AddRole=Add role
 UserManagerPanel.AddUser=Add user
