Postfix for RS-92787 - Add localization for "View Menu" button in JFileChooser dialog

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1639,6 +1639,8 @@ LocaleManager.FileChooser.saveInLabelText=Save to:
 LocaleManager.FileChooser.upFolderAccessibleName=Up
 LocaleManager.FileChooser.upFolderToolTipText=One level up
 LocaleManager.FileChooser.viewMenuLabelText=View
+LocaleManager.FileChooser.viewMenuButtonToolTipText=View Menu
+LocaleManager.FileChooser.viewMenuButtonAccessibleName=View Menu
 LoginPasswordDialog.login=Login
 LoginPasswordDialog.password=Password
 LoginPasswordDialog.register=Register
