--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1639,6 +1639,8 @@ LocaleManager.FileChooser.saveInLabelText=Сохранить в:
 LocaleManager.FileChooser.upFolderAccessibleName=Вверх
 LocaleManager.FileChooser.upFolderToolTipText=На один уровень вверх
 LocaleManager.FileChooser.viewMenuLabelText=Просмотр
+LocaleManager.FileChooser.viewMenuButtonToolTipText=Просмотр
+LocaleManager.FileChooser.viewMenuButtonAccessibleName=Просмотр
 LoginPasswordDialog.login=Войти
 LoginPasswordDialog.password=Пароль
 LoginPasswordDialog.register=Зарегистрироваться
