See RS-143370 add ability write trace only to file

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -2023,6 +2023,7 @@ TraceManagerPanel.User=User
 TraceManagerPanel.Username=User name
 TraceManagerPanel.VisibleColumns=Visible Columns
 TraceManagerPanel.matchCase=Match case
+TraceManagerPanel.parseTraceToGrid=Parse trace to grid
 TraceManagerPanel.title=Trace Manager
 ToolBarButton.separator=- Separator -
 UserManagerPanel.Add=Add
