--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -2023,6 +2023,7 @@ TraceManagerPanel.User=Пользователь
 TraceManagerPanel.Username=Имя пользователя
 TraceManagerPanel.VisibleColumns=Видимые столбцы
 TraceManagerPanel.matchCase=Учитывать регистр
+TraceManagerPanel.parseTraceToGrid=Парсить данные в таблицу
 TraceManagerPanel.title=Трейс менеджер
 ToolBarButton.separator=- Разделитель -
 UserManagerPanel.Add=Добавить
