Add popup menu for profiler treeTable nodes

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -91,6 +91,7 @@ common.title-enter-password=Ввод пароля
 common.triggers=Триггеры
 common.value=Значение
 common.yes.button=Да
+common.show=Просмотреть
 # -------------------------------------------------------------
 # actions
 # -------------------------------------------------------------
