--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -91,6 +91,7 @@ common.title-enter-password=Enter password
 common.triggers=Triggers
 common.value=Value
 common.yes.button=Yes
+common.show=Show
 # -------------------------------------------------------------
 # actions
 # -------------------------------------------------------------
