Add localization for profiler panel

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1746,6 +1746,11 @@ ProfilerPanel.ErrorSessionResume=Unable to resume profiler session
 ProfilerPanel.ErrorSessionStop=Unable to stop profiler session
 ProfilerPanel.ErrorSessionCancel=Unable to cancel profiler session
 ProfilerPanel.ErrorSessionDiscard=Unable to discard profiler session
+ProfilerPanel.SelfTime=Self Time
+ProfilerPanel.PROCESS-NAME=PROCESS NAME
+ProfilerPanel.TOTAL-TIME=TOTAL TIME (нс)
+ProfilerPanel.AVERAGE-TIME=AVERAGE TIME (нс)
+ProfilerPanel.CALLS-COUNT=CALLS COUNT
 PropertiesAppearance.ChangingTheme.Information=Changing the look and feel may also change the colours applied to syntax\nhighlighting and the results set table views to better suit the selected look
 PropertiesLookPlugins.Find=Find
 PropertiesLookPlugins.Browse=Browse
