Minor fixes for profiler

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1738,14 +1738,15 @@ ProfilerPanel.Cancel=Отменить
 ProfilerPanel.Discard=Очистить
 ProfilerPanel.Connection=Соединение:
 ProfilerPanel.compactViewCheckBox=Компактное отображение
-ProfilerPanel.ErrorUpdatingData=Возникла ошибка при обновлении данных профайлера
+ProfilerPanel.ErrorUpdatingData=Профайлер не собрал никаких данных.\nПожалуйста, проверьте выбранное соедениение.
 ProfilerPanel.VersionNotSupported=Невозможно запустить сессию профайлера\nВерсия БД ниже 5.0
 ProfilerPanel.ErrorSessionStart=Невозможно запустить сессию профайлера
 ProfilerPanel.ErrorSessionPause=Невозможно приостановить сессию профайлера
 ProfilerPanel.ErrorSessionResume=Невозможно возобновить сессию профайлера
-ProfilerPanel.ErrorSessionStop=Невозможно остановить сессию профайлера
+ProfilerPanel.ErrorSessionFinish=Невозможно остановить сессию профайлера
 ProfilerPanel.ErrorSessionCancel=Невозможно отменить сессию профайлера
 ProfilerPanel.ErrorSessionDiscard=Невозможно очистить сессии профайлера
+ProfilerPanel.NotConnected=Выбранное соединение недоступно
 ProfilerPanel.SelfTime=Собственное время
 ProfilerPanel.PROCESS-NAME=ИМЯ ПРОЦЕССА
 ProfilerPanel.TOTAL-TIME=ОБЩЕЕ ВРЕМЯ (ns)
