--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1738,14 +1738,15 @@ ProfilerPanel.Cancel=Cancel
 ProfilerPanel.Discard=Discard
 ProfilerPanel.Connection=Connection:
 ProfilerPanel.compactViewCheckBox=Compact view
-ProfilerPanel.ErrorUpdatingData=Error updating profiler data
+ProfilerPanel.ErrorUpdatingData=The profiler did not collect any data.\nPlease check the selected connection.
 ProfilerPanel.VersionNotSupported=Unable to start profiler session\nDB version below 5.0
 ProfilerPanel.ErrorSessionStart=Unable to start profiler session
 ProfilerPanel.ErrorSessionPause=Unable to pause profiler session
 ProfilerPanel.ErrorSessionResume=Unable to resume profiler session
-ProfilerPanel.ErrorSessionStop=Unable to stop profiler session
+ProfilerPanel.ErrorSessionFinish=Unable to finish profiler session
 ProfilerPanel.ErrorSessionCancel=Unable to cancel profiler session
 ProfilerPanel.ErrorSessionDiscard=Unable to discard profiler session
+ProfilerPanel.NotConnected=Selected connection is unavailable
 ProfilerPanel.SelfTime=Self Time
 ProfilerPanel.PROCESS-NAME=PROCESS NAME
 ProfilerPanel.TOTAL-TIME=TOTAL TIME (нс)
