Add permissions check before download update (See RS-38554)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -2026,6 +2026,7 @@ TraceManagerPanel.matchCase=Match case
 TraceManagerPanel.parseTraceToGrid=Parse trace to grid
 TraceManagerPanel.title=Trace Manager
 ToolBarButton.separator=- Separator -
+UpdateLoader.PermissionsDenied=Cannot download update (permissions denied) by the several path:\n%s
 UserManagerPanel.Add=Add
 UserManagerPanel.AddRole=Add role
 UserManagerPanel.AddUser=Add user
