--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -2026,6 +2026,7 @@ TraceManagerPanel.matchCase=Учитывать регистр
 TraceManagerPanel.parseTraceToGrid=Парсить данные в таблицу
 TraceManagerPanel.title=Трейс менеджер
 ToolBarButton.separator=- Разделитель -
+UpdateLoader.PermissionsDenied=Невозможно загрузить обновление (недостаточно прав) по следующему пути:\n%s
 UserManagerPanel.Add=Добавить
 UserManagerPanel.AddRole=Добавить роль
 UserManagerPanel.AddUser=Добавить пользователя
