Fix localization for profiler

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1749,8 +1749,8 @@ ProfilerPanel.ErrorSessionDiscard=Unable to discard profiler session
 ProfilerPanel.NotConnected=Selected connection is unavailable
 ProfilerPanel.SelfTime=Self Time
 ProfilerPanel.PROCESS-NAME=PROCESS NAME
-ProfilerPanel.TOTAL-TIME=TOTAL TIME (нс)
-ProfilerPanel.AVERAGE-TIME=AVERAGE TIME (нс)
+ProfilerPanel.TOTAL-TIME=TOTAL TIME (ns)
+ProfilerPanel.AVERAGE-TIME=AVERAGE TIME (ns)
 ProfilerPanel.CALLS-COUNT=CALLS COUNT
 PropertiesAppearance.ChangingTheme.Information=Changing the look and feel may also change the colours applied to syntax\nhighlighting and the results set table views to better suit the selected look
 PropertiesLookPlugins.Find=Find
