--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1749,8 +1749,8 @@ ProfilerPanel.ErrorSessionDiscard=Невозможно очистить сесс
 ProfilerPanel.NotConnected=Выбранное соединение недоступно
 ProfilerPanel.SelfTime=Собственное время
 ProfilerPanel.PROCESS-NAME=ИМЯ ПРОЦЕССА
-ProfilerPanel.TOTAL-TIME=ОБЩЕЕ ВРЕМЯ (ns)
-ProfilerPanel.AVERAGE-TIME=СРЕДНЕЕ ВРЕМЯ (ns)
+ProfilerPanel.TOTAL-TIME=ОБЩЕЕ ВРЕМЯ (нс)
+ProfilerPanel.AVERAGE-TIME=СРЕДНЕЕ ВРЕМЯ (нс)
 ProfilerPanel.CALLS-COUNT=КОЛ-ВО ВЫЗОВОВ
 PropertiesAppearance.ChangingTheme.Information=Изменение внешнего вида может также изменить цвета, применяемые к подсветке синтаксиса\nи результаты заданных таблиц представлены так, чтобы они лучше соответствовали выбранному виду
 PropertiesLookPlugins.Find=Найти
