Add tooltip for "execute in profiler" button

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1860,6 +1860,7 @@ QueryEditorToolBar.editor-show-hide-rs-columns-command=Выбрать отобр
 QueryEditorToolBar.editor-stop-command=Отмена выполнения текущего запроса
 QueryEditorToolBar.execute-at-cursor-command=Выполнить оператор, на котором находится курсор
 QueryEditorToolBar.execute-command=Выполнить запрос как единый блок
+QueryEditorToolBar.execute-in-profiler-command=Выполнить в профайлере
 QueryEditorToolBar.execute-script-command=Выполнить SQL скрипт
 QueryEditorToolBar.execute-selection-command=Выполнить выделенный SQL скрипт
 QueryEditorToolBar.manage-shortcuts-command=Шаблоны SQL
