Minor fixes for profiler behavior when the selected DB connection is unavailable

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1746,7 +1746,8 @@ ProfilerPanel.ErrorSessionResume=Unable to resume profiler session
 ProfilerPanel.ErrorSessionFinish=Unable to finish profiler session
 ProfilerPanel.ErrorSessionCancel=Unable to cancel profiler session
 ProfilerPanel.ErrorSessionDiscard=Unable to discard profiler session
-ProfilerPanel.NotConnected=Selected connection is unavailable
+ProfilerPanel.NotConnected=Selected connection is unavailable.
+ProfilerPanel.NotConnectedCancel=Selected connection is unavailable.\nProfiler session discarded.
 ProfilerPanel.SelfTime=Self Time
 ProfilerPanel.PROCESS-NAME=PROCESS NAME
 ProfilerPanel.TOTAL-TIME=TOTAL TIME (ns)
