Add warning messages when profiler did not collect more data than it had from last pause

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1738,7 +1738,8 @@ ProfilerPanel.Cancel=Отменить
 ProfilerPanel.Discard=Очистить
 ProfilerPanel.Connection=Соединение:
 ProfilerPanel.compactViewCheckBox=Компактное отображение
-ProfilerPanel.ErrorUpdatingData=Профайлер не собрал никаких данных.\nПожалуйста, проверьте выбранное соединение.
+ProfilerPanel.NoData=Профайлер не собрал никаких данных\nПожалуйста, проверьте выбранное соединение
+ProfilerPanel.NoNewData=Профайлер не собрал больше данных, чем было
 ProfilerPanel.VersionNotSupported=Невозможно запустить сессию профайлера\nВерсия БД ниже 5.0
 ProfilerPanel.ErrorSessionStart=Невозможно запустить сессию профайлера
 ProfilerPanel.ErrorSessionPause=Невозможно приостановить сессию профайлера
