--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1738,7 +1738,8 @@ ProfilerPanel.Cancel=Cancel
 ProfilerPanel.Discard=Discard
 ProfilerPanel.Connection=Connection:
 ProfilerPanel.compactViewCheckBox=Compact view
-ProfilerPanel.ErrorUpdatingData=The profiler did not collect any data.\nPlease check the selected connection.
+ProfilerPanel.NoData=The profiler did not collect any data\nPlease check the selected connection
+ProfilerPanel.NoNewData=The profiler did not collect more data than it had
 ProfilerPanel.VersionNotSupported=Unable to start profiler session\nDB version below 5.0
 ProfilerPanel.ErrorSessionStart=Unable to start profiler session
 ProfilerPanel.ErrorSessionPause=Unable to pause profiler session
