Add profiler description (RS-143811)

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -1932,6 +1932,63 @@ SELECT * FROM employees WHERE (surname = ?)
 
 \newpage
 
+\section{Профайлер}\label{sec:profiler}
+
+Инструмент \textit{Профайлер} позволяет пользователям измерять затраты на производительность \ttt{SQL} и \ttt{PSQL} кода. 
+
+Чтобы открыть панель профайлера, в меню \textit{Инструменты} выберите \textit{Профайлер}. 
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 0.5\linewidth]{img/open_profiler_module.png}
+	\caption{Открытие панели профайлера}
+\end{figure}
+
+После этого откроется панель профайлера, состоящая из выпадающего списка для выбора соединения, набора кнопок для управления сессией профайлера, поля "Компактное отображение" и результирующей таблицы.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width = 1\linewidth]{img/profiler_module.png}
+	\caption{Панель профайлера}
+\end{figure}
+
+Кнопки, управляющие сессией профайлера:
+\begin{itemize}
+\item \ttt{Старт} -- запускает новый сеанс профайлера;
+\item \ttt{Пауза} -- приостанавливает текущий сеанс профайлера;
+\item \ttt{Возобновить} -- возобновляет приостановленный сеанс профайлера;
+\item \ttt{Стоп} -- завершает текущий сеанс профайлера;
+\item \ttt{Отменить} -- удаляет все данные сеанса, присутствующие в плагине профайлера (данные, которые были обновлены, не удаляются);
+\item \ttt{Очистить} -- удаляет все сеансы профайлера из памяти, не cбрасывая их данных. Если есть активный сеанс, он завершается. Также очищает дерево вызовов, которое было построено профайлером.
+\end{itemize}
+
+\ttt{Компактное отображение} меняет способ отображения данных. Если включено, то повторяющиеся процессы внутри общего родительского будут объединены в один. По умолчанию включено.
+
+ \begin{figure}[H]
+ 	\centering
+ 	\includegraphics[width = 1\linewidth]{img/profiler_compact_data_display.png}
+ 	\caption{Компактное отображение данных}
+ \end{figure}
+
+В результирующей таблице отображается информация, собранная профайлером, а именно:
+\begin{itemize}
+	\item Имя процесса или \ttt{SQL-код};
+	\item Затраченное на процесс время (с учетом дочерних процессов) и процент времени от родительского процесса;
+	\item Среднее затраченное на процесс время (с учетом дочерних процессов) для повторяющихся процессов, объединенных в один узел; 
+	\item Количество вызовов повторяющихся процессов.
+\end{itemize}
+Для каждого не последнего узла (за исключением \ttt{ROOT NODE} - корневого узла) есть узел \ttt{Собственное время}, показывающий затраченное время без учета дочерних процессов.
+
+Сессию профайлера можно запустить для одного запроса из \ttt{редактора запросов} кликом по кнопке "Выполнить в профайлере". В этом случае будет выполнено следующее:
+\begin{enumerate}
+	\item Запустится сессия профайлера.
+	\item Выполнится находящийся в редакторе запрос.
+	\item Завершится сессия профайлера.
+	\item Отобразится панель профайлера с собранной информацией.
+\end{enumerate}	
+
+\newpage
+
 \section{Генератор тестовых данных}\label{sec:test_data_generator}
 
 Инструмент \textit{Генератор тестовых данных} предназначен для быстрого и удобного заполнения полей таблицы большим объемом данных. Его можно открыть через пункт меню \textit{Инструменты}.
