added column showing required field

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1379,6 +1379,7 @@ GeneratorTestDataPanel.Name=Name
 GeneratorTestDataPanel.OOAPINotUsed=The connection does not use the OO API. Use it when connecting
 GeneratorTestDataPanel.OutputLog=Output to the errors log
 GeneratorTestDataPanel.Random=Random
+GeneratorTestDataPanel.Required=Required
 GeneratorTestDataPanel.Selected=Selected/Deselected
 GeneratorTestDataPanel.Source=Source
 GeneratorTestDataPanel.Start=Start
