improve analise audit

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -614,6 +614,10 @@ AddQueryBookmarkPanel.validation.uniqueName=The name for this bookmark already e
 AddToUserDefinedKeywordsCommand.log.addKeyword1=Keyword [ 
 AddToUserDefinedKeywordsCommand.log.addKeyword2=\ ] added to user defined keyword list.
 AddToUserDefinedKeywordsCommand.log.errorAddKeyword=Keyword already exists as a part of the defined keyword list.
+AnalisePanel.HideEvents=Hide events
+AnalisePanel.ShowEvents=Show events
+AnalisePanel.AvailableEvents=Available events
+AnalisePanel.SelectedEvents=Selected events
 AnaliseRecompileDialog.generateScript=generated script for {0}
 ApplicationLauncher.console-JavaVersion=Java version
 ApplicationLauncher.console-OSVersion=Operating System
