improve Audit Analise 1.add time period to AuditAnalise 2.add all events to ItemDataViewer 3.fix displaying read/fetch/write

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -74,6 +74,7 @@ common.paste=Paste
 common.print.button=Print
 common.privileges=Privileges
 common.properties=Properties
+common.rebuild=Rebuild
 common.references=References
 common.required=Required
 common.save-as.button=Save As
@@ -618,6 +619,7 @@ AnalisePanel.HideEvents=Hide events
 AnalisePanel.ShowEvents=Show events
 AnalisePanel.AvailableEvents=Available events
 AnalisePanel.SelectedEvents=Selected events
+AnalisePanel.Period=Period:
 AnaliseRecompileDialog.generateScript=generated script for {0}
 ApplicationLauncher.console-JavaVersion=Java version
 ApplicationLauncher.console-OSVersion=Operating System
