--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -74,6 +74,7 @@ common.paste=Вставить
 common.print.button=Печать
 common.privileges=Привилегии
 common.properties=Свойства
+common.rebuild=Обновить
 common.references=Ссылки
 common.required=Not Null
 common.save-as.button=Сохранить как
@@ -618,6 +619,7 @@ AnalisePanel.HideEvents=Скрыть события
 AnalisePanel.ShowEvents=Показать события
 AnalisePanel.AvailableEvents=Доступные события
 AnalisePanel.SelectedEvents=Выбранные события
+AnalisePanel.Period=Период:
 AnaliseRecompileDialog.generateScript=сгенерирован скрипт для {0}
 ApplicationLauncher.console-JavaVersion=Версия Java
 ApplicationLauncher.console-OSVersion=Операционная система
