--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -869,7 +869,7 @@ CheckForUpdateNotifier.noInternetMessage=There is no internet connection. Please
 CheckForUpdateNotifier.noUpdateMessage=No update available.\nThis version of Red Expert is up to date.\nPlease check back here periodically to ensure you have the latest version.
 CheckForUpdateNotifier.progressDialogForReleaseNotesLabel=Retrieving new version release notes
 CheckForUpdateNotifier.restart.message.title=Update downloaded
-CheckForUpdateNotifier.restart.message=The update has been downloaded. Do you want to restart the application?
+CheckForUpdateNotifier.restart.message=The update has been downloaded. Do you want to restart the application?\nClose all copies of this application before restarting.
 CheckForUpdateNotifier.title=RedExpert Update
 CheckForUpdateNotifier.updateAvailable=Update available
 ClearRecentFilesCommand.message=An IO error occurred clearing the recent open files list
