--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -869,7 +869,7 @@ CheckForUpdateNotifier.noInternetMessage=Отсутствует подключе
 CheckForUpdateNotifier.noUpdateMessage=Обновление недоступно. \nДанная версия Red Expert актуальна. \nПериодически проверяйте обновления, чтобы убедиться, что у вас установлена последняя версия.
 CheckForUpdateNotifier.progressDialogForReleaseNotesLabel=Получение примечаний к выпуску новой версии
 CheckForUpdateNotifier.restart.message.title=Обновление загружено
-CheckForUpdateNotifier.restart.message=Обновление загружено. Перезапустить приложение?
+CheckForUpdateNotifier.restart.message=Обновление загружено. Перезапустить приложение?\nПеред перезагрузкой закройте все копии этого приложения.
 CheckForUpdateNotifier.title=Обновление Ред Эксперта
 CheckForUpdateNotifier.updateAvailable=Доступно обновление
 ClearRecentFilesCommand.message=Произошла ошибка ввода-вывода при очистке списка последних открытых файлов
